--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,10 +1,11 @@
 ////////////////
 // Base Index //
 ////////////////
-
+@import "normalize";
 @import "variables";
 @import "colors";
 @import "typography";
 @import "reset";
 @import "base";
+@import "grid";
 
