--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,62 +1,108 @@
-// ----------- //
-// Hero Banner //
-// ----------- //
+// ------------ //
+// Hero Section //
+// ------------ //
 
-        .header__hero {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: nowrap;
-            flex: 1;
-            white-space: nowrap;
-            position: relative;
-            width: 100%;
-            min-height: 100vh; 
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            
-            @include respond-to(md) {
-                width: calc(100% - 150px);
-                margin-left: 150px;
-            }
 
-           img {
-            position: absolute;
-            top: 145px;
-            left: 20px;
-            max-width: 100%;    
-            height: auto;
-            
-           }
+.hero__container { 
+    display: grid;
+    
+    // min-height: 100px;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-content: center;
+    overflow: hidden;
+    
+  
+    img {
+        width: 100%;
+        height: auto;
+        min-height: 250px;
+        image-rendering: optimizeQuality;
+        object-fit: cover;
+        margin-left: 20px;
+    }
+
+    .hero__scroll {
+        display: grid;
+        justify-items: center;
+        text-align: center;
+        white-space: nowrap; 
+        margin: 0; 
+    
+    
+        span {
+            grid-row: 1; 
+            line-height: 5px;
         }
-
-        .header__down {
-            @include respond-to(md) {
-                display: none;
-            }
-            position: absolute;
-            bottom: 20px;
-            left: calc(50% - 48px);
-            text-align: center;
-            font-family: $base-font-family;
-            font-size: 1.25rem;
-            font-weight: 500;
-            color: $text-color;
-            animation: bounce 3s infinite;
-            @keyframes bounce {
-                0%, 20%, 50%, 80%, 100% {
-                    transform: translateY(0);
-                }
-                40% {
-                    transform: translateY(-10px);
-                }
-                60% {
-                    transform: translateY(-5px);
-                }
-            }
-
-            i {
-                justify-self: center;
-            }
-
+    
+        a {
+            grid-row: 2; 
+            margin-top: 2px; 
+            justify-self: center; 
         }
+    
+    }
+
+}
+
+
+
+        // .header__hero {
+        //     display: flex;
+        //     flex-direction: column;
+        //     flex-wrap: nowrap;
+        //     flex: 1;
+        //     white-space: nowrap;
+        //     position: relative;
+        //     width: 100%;
+        //     min-height: 100vh; 
+        //     background-size: cover;
+        //     background-position: center;
+        //     background-repeat: no-repeat;
+            
+        //     @include respond-to(md) {
+        //         width: calc(100% - 150px);
+        //         margin-left: 150px;
+        //     }
+
+        //    img {
+        //     position: absolute;
+        //     top: 145px;
+        //     left: 20px;
+        //     max-width: 100%;    
+        //     height: auto;
+            
+        //    }
+        // }
+
+        // .header__down {
+        //     @include respond-to(md) {
+        //         display: none;
+        //     }
+        //     position: absolute;
+        //     bottom: 20px;
+        //     left: calc(50% - 48px);
+        //     text-align: center;
+        //     font-family: $base-font-family;
+        //     font-size: 1.25rem;
+        //     font-weight: 500;
+        //     color: $text-color;
+        //     animation: bounce 3s infinite;
+        //     @keyframes bounce {
+        //         0%, 20%, 50%, 80%, 100% {
+        //             transform: translateY(0);
+        //         }
+        //         40% {
+        //             transform: translateY(-10px);
+        //         }
+        //         60% {
+        //             transform: translateY(-5px);
+        //         }
+        //     }
+
+        //     i {
+        //         justify-self: center;
+        //     }
+
+        // }
