--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -2,117 +2,149 @@
 // Side Menu //
 // --------- //
 
-nav {
-    display: flex;
-}
-
-.sidebar__burger {
-    display: block;
-    @include center-absolute(35px, calc(100% - 55px));
-    z-index: 10;
-    font-size: 3rem;
-    color: $primary-color;
-    text-shadow: 3px 3px darken($primary-color, 20%);
-    cursor: pointer;
-
-    &:hover {
-        color: darken($primary-color, 20%);
-        text-shadow: 3px 3px $primary-color;
-    }
-
-    @include respond-to(md) {
-        display: none;
-    }
-}
-
-
-.sidebar__container {
+.menu__container {  
     display: none;
-
+    
     @include respond-to(md) {
-        position: fixed;  
-        top: 0;           
-        left: 0;          
-        width: 150px;    
-        height: 100vh; 
-        font-family: $base-font-family; 
-        border-right: 3px solid $primary-color;  
-        background-color: $background-color; 
-        padding: 20px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        z-index: 1000;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 2fr 0.5fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "menu__logo menu__logo menu__logo"
+      "menu__links menu__links menu__links"
+      "menu__socials menu__socials menu__socials";
+    grid-area: menu__container;
+    
+    .menu__logo { grid-area: menu__logo; }
+  
+    .menu__links { grid-area: menu__links; }
+  
+    .menu__socials { grid-area: menu__socials; }
+    }
+  }
+  
+  
+  
+  
 
-        .sidebar__logo { 
-            margin: 0 auto;
-            padding-top: 0px;
-            padding-bottom: 3px;
-            font-family: $logo-font;  
-            font-size: 3rem;
-            font-weight: 800;
-            line-height: 2.5rem;
-            border-top: 2px solid $text-color;
-            border-bottom: 2px solid $primary-color;
+
+
+
+
+
+// nav {
+//     display: flex;
+// }
+
+// .sidebar__burger {
+//     display: block;
+//     @include center-absolute(35px, calc(100% - 55px));
+//     z-index: 10;
+//     font-size: 3rem;
+//     color: $primary-color;
+//     text-shadow: 3px 3px darken($primary-color, 20%);
+//     cursor: pointer;
+
+//     &:hover {
+//         color: darken($primary-color, 20%);
+//         text-shadow: 3px 3px $primary-color;
+//     }
+
+//     @include respond-to(md) {
+//         display: none;
+//     }
+// }
+
+
+// .sidebar__container {
+//     display: none;
+
+//     @include respond-to(md) {
+//         position: fixed;  
+//         top: 0;           
+//         left: 0;          
+//         width: 150px;    
+//         height: 100vh; 
+//         font-family: $base-font-family; 
+//         border-right: 3px solid $primary-color;  
+//         background-color: $background-color; 
+//         padding: 20px;
+//         box-sizing: border-box;
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-between;
+//         z-index: 1000;
+
+//         .sidebar__logo { 
+//             margin: 0 auto;
+//             padding-top: 0px;
+//             padding-bottom: 3px;
+//             font-family: $logo-font;  
+//             font-size: 3rem;
+//             font-weight: 800;
+//             line-height: 2.5rem;
+//             border-top: 2px solid $text-color;
+//             border-bottom: 2px solid $primary-color;
             
-            // img {
-            //     height: 130px;
-            //     width: 130px;
-            // }
-        }
+//             // img {
+//             //     height: 130px;
+//             //     width: 130px;
+//             // }
+//         }
 
-        .sidebar__links {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            font-size: 0.925rem;
-            font-weight: 600;
-            text-transform: uppercase;
-            line-height: 1.25rem;
-            letter-spacing: 2px;
-            color: $text-color;
+//         .sidebar__links {
+//             list-style: none;
+//             padding: 0;
+//             margin: 0;
+//             font-size: 0.925rem;
+//             font-weight: 600;
+//             text-transform: uppercase;
+//             line-height: 1.25rem;
+//             letter-spacing: 2px;
+//             color: $text-color;
 
-            li {
-                margin-bottom: 15px;
-            }
+//             li {
+//                 margin-bottom: 15px;
+//             }
 
-            a {
-                text-decoration: none;
+//             a {
+//                 text-decoration: none;
                 
                 
-                &:hover {
-                    color: lighten($text-color, 10%);
-                }
-            }
-        }
+//                 &:hover {
+//                     color: lighten($text-color, 10%);
+//                 }
+//             }
+//         }
        
-        .sidebar__socials {
-            margin-top: 20px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
+//         .sidebar__socials {
+//             margin-top: 20px;
+//             display: flex;
+//             flex-direction: row;
+//             justify-content: center;
 
-            i {
-                margin-right: 10px;
-                color: darken($primary-color, 10%);
-                font-size: 1.75rem;
+//             i {
+//                 margin-right: 10px;
+//                 color: darken($primary-color, 10%);
+//                 font-size: 1.75rem;
 
-                &:hover{
-                    color: lighten($primary-color, 10%);
-            }
+//                 &:hover{
+//                     color: lighten($primary-color, 10%);
+//             }
 
-            a {
-                text-decoration: none;
-                color: $text-color;
-                font-size: 1rem;
-                display: flex;
-                align-items: center;
+//             a {
+//                 text-decoration: none;
+//                 color: $text-color;
+//                 font-size: 1rem;
+//                 display: flex;
+//                 align-items: center;
                 
                
-                 }     
-            }
-        }
-    }
-}
+//                  }     
+//             }
+//         }
+//     }
+// }
 
