--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -38,3 +38,29 @@
     left: $left;
     transform: translate(-50%, -50%);
   }
+
+  // Project Card //
+
+  @mixin project-card($img-url) {
+    align-content: center;
+    max-height: 200px;
+    max-width: 200px;
+    background-color: transparent;
+    padding: 5px;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+    background-image: url(#{$img-url});
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.7;
+
+    &:hover {
+        transform: translateY(-5px); 
+        box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);  
+        opacity: 0.9;
+    }
+}
+  
