--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,5 +27,12 @@ a {
   color: inherit;
 }
 
+body {
+  margin: 0;
+  background-color: $background-color;
+  color: $text-color;
+  font-family: $base-font-family;
+}
+
 
 
