--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -2,30 +2,37 @@
 /// Grid Container ///
 /// -------------- ///
 
-.grid__container {          /*Hide Larger Grid Initially*/
+.grid__container--md {          /*Hide Larger Grid Initially*/
     display: none;
 }
 
 .grid__container--xs {      /*Small Devices First*/
+    
     display: grid;
     grid-template-columns: 1fr; 
-    grid-template-rows: auto 2fr 1fr 20px; 
+    grid-template-rows: repeat(3, 1fr) 20px; 
     gap: 0px 0px; 
+    margin: 0 10px;
+    grid-template-areas: 
+        "hero__container"
+        "project__container--xs"
+        "contact__container--xs"
+        "footer__container";
 
     .hero__container { 
-        grid-area: 1 / 1 / 3 / 2; 
+        grid-area: hero__container; 
     }
 
-    .project__container {
-        grid-area: 2 / 1 / 3 / 2; 
+    .project__container--xs {
+        grid-area: project__container--xs; 
     }
 
-    .contact__container {
-        grid-area: 3 / 1 / 4 / 2;
+    .contact__container--xs {
+        grid-area: contact__container--xs;
     }
 
     .footer__container {
-        grid-area: 4 / 1 / 5 / 2;
+        grid-area: footer__container;
     }
 }
   
@@ -37,7 +44,7 @@
     }
 
 
-    .grid__container {
+    .grid__container--md {
     display: grid; 
     grid-auto-columns: 1fr; 
     grid-template-columns: 150px 1fr; 
@@ -46,9 +53,9 @@
     grid-template-areas: 
       "menu__container hero__container"
       "menu__container hero__container"
-      "menu__container project__container"
-      "menu__container project__container"
-      "menu__container contact__container"
+      "menu__container project__container--md"
+      "menu__container project__container--md"
+      "menu__container contact__container--md"
       "footer__container footer__container"; 
     width: 100%; 
   }
@@ -57,12 +64,12 @@
     grid-area: hero__container; 
   }
 
-  .project__container {
-    grid-area: project__container;
+  .project__container--md {
+    grid-area: project__container--md;
   }
 
-  .contact__container {
-    grid-area: contact__container;
+  .contact__container--md {
+    grid-area: contact__container--md;
   }
 
   .footer__container {
