--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -3,8 +3,212 @@
 // ------- //
 
 
-.contact__container { grid-area: contact__container; }
+/*-------------------------------*/
+/*Small Devices Contact Container*/
+/*-------------------------------*/
 
+
+.contact__container--xs {
+
+    /*Small Devices Contact Grid*/  
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 30px 30px 30px 0.7fr 60px;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+
+        /*Grid Layout*/
+
+        "contact__heading--xs"
+        "contact__phone--xs"
+        "contact__email--xs"
+        "contact__form--xs"
+        "contact__scroll";
+  
+
+    /*Heading*/
+    .contact__heading--xs {
+        grid-area: contact__heading--xs;
+        scroll-snap-align: start;
+        align-self: center;
+        justify-self: left;
+        margin-top: 10px;
+        font-size: 1.1rem;
+        font-weight: 400;
+        letter-spacing: 0.1rem;
+    }
+
+    /*Phone Icon Link*/
+    .contact__phone--xs {
+        grid-area: contact__phone--xs;
+        align-self: center;
+        justify-self: left;
+        margin-top: 20px;
+
+        font-size: 1.2rem;
+        font-weight: 500;
+        letter-spacing: 1.5px;
+        
+            i {
+                font-size: 1.2rem;
+            }
+    }
+
+    /*Email Icon Link*/
+    .contact__email--xs {
+        grid-area: contact__email--xs;
+        align-self: center;
+        justify-self: left;
+        margin-top: 10px;
+
+        font-size: 1.3rem;
+        font-weight: 500;
+        letter-spacing: 1.5px;
+        
+            i {
+                font-size: 1.2rem;
+            }
+    }
+
+    /*Small Devices Contact Form*/
+    .contact__form--xs { 
+        grid-area: contact__form--xs;
+        background-color: $background-color;
+        box-shadow: $box-shadow;
+        border-radius: 8px;
+        margin-top: 20px;
+        padding: 10px;
+       
+        .form {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 40px 40px 40px 40px 200px 50px;
+            gap: 10px 10px;
+            grid-auto-flow: row;
+            grid-template-areas:
+
+                /*Form Grid Layout*/
+            
+                "form__firstname--xs"
+                "form__lastname--xs"
+                "form__email--xs"
+                "form__subject--xs"
+                "form__message--xs"
+                "form__submit--xs";
+
+            /*First Name Input*/
+            .form__firstname--xs {
+                grid-area: form__firstname--xs;
+
+                @include form-style();
+            }
+
+            /*Last Name Input*/
+            .form__lastname--xs {
+                grid-area: form__lastname--xs;
+
+                @include form-style();
+            }
+
+            /*Email Input*/
+            .form__email--xs {
+                grid-area: form__email--xs;
+
+                @include form-style();
+            }
+
+            /*Subject Input*/
+            .form__subject--xs {
+                grid-area: form__subject--xs;
+
+                @include form-style();
+            }
+
+            /*Message Text Area Input*/
+            .form__message--xs {
+                grid-area: form__message--xs;
+
+                @include form-style();
+                margin-top: 10px;
+            }
+
+            /*Submit Button*/
+            .form__submit--xs {
+                display: grid;
+                grid-area: form__submit--xs;
+                
+                width: 200px;
+                align-self: center;
+                justify-self: center;
+                padding: 12px;
+                background-color: darken($primary-color, 10%);
+                border: none;
+                border-radius: 6px;
+                color: $background-color;
+                font-size: 16px;
+                cursor: pointer;
+                margin-top: 10px;
+                    
+                    &:hover {
+                        background-color: lighten($primary-color, 1%);
+                        color: darken($background-color, 5%);
+                    }
+            }
+        }
+    }
+
+    /*Back To Top Icon Link*/
+    .contact__scroll { 
+        grid-area: contact__scroll;
+
+        margin-top: 30px;
+        font-family: $base-font-family;
+        font-size: 1.1rem;
+        font-weight: 500;
+        color: $text-color;
+        justify-self: center;
+        align-self: center;
+
+        i {
+            margin-left: calc(100% - 55px);
+        }
+
+
+        /*Icon Bouncing Animation*/
+        animation: bounce 3s infinite;
+            @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+            transform: translateY(0);
+            }
+            40% {
+            transform: translateY(-10px);
+            }
+            60% {
+            transform: translateY(-5px);
+            }
+        }
+
+        /*Hide Icon Link at 768px*/
+        @include respond-to(md) {
+            display: none;
+        }
+    }
+
+    /*Hide Small Devices Contact Grid at 768px*/
+    @include respond-to(md){
+        display: none;
+    }
+
+}
+
+
+/*----------------------------------------------------------------------*/
+/*----------------------------------------------------------------------*/
+  
+/*--------------------------------*/
+/*Medium Devices Contact Container*/
+/*--------------------------------*/
 
 
 // .contact__container {
