--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -5,30 +5,52 @@
 
 .hero__container { 
     display: grid;
-    
-    // min-height: 100px;
     width: 100%;
     height: 100vh;
+    margin: 0 20px;
+    scroll-snap-align: start;
+    justify-items: center;
     justify-content: center;
     align-content: center;
     overflow: hidden;
+    grid-template-rows: 1fr auto;
     
   
     img {
         width: 100%;
         height: auto;
-        min-height: 250px;
+        min-height: 150px;
         image-rendering: optimizeQuality;
         object-fit: cover;
-        margin-left: 20px;
+        align-self: center;
     }
 
     .hero__scroll {
         display: grid;
-        justify-items: center;
-        text-align: center;
-        white-space: nowrap; 
-        margin: 0; 
+        font-family: $base-font-family;
+        font-size: 1.1rem;
+        font-weight: 500;
+        color: $text-color;
+        justify-self: center;
+        align-self: center;
+       
+       
+        margin-bottom: 30px;
+        align-self: end;
+
+        animation: bounce 3s infinite;
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+            transform: translateY(0);
+            }
+            40% {
+            transform: translateY(-10px);
+            }
+            60% {
+            transform: translateY(-5px);
+            }
+        }
+      
     
     
         span {
@@ -40,6 +62,10 @@
             grid-row: 2; 
             margin-top: 2px; 
             justify-self: center; 
+        }
+
+        @include respond-to(md) {
+            display: none;
         }
     
     }
