--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,3 +2,13 @@
 // Footer License //
 // -------------- //
 
+.footer__container {
+    font-family: $base-font-family;
+    font-size: 0.6rem;
+    font-weight: 400;
+    line-height: 2.5;
+    padding-left: 5px;
+    color: $text-color;
+    background-color: $primary-color;
+    justify-content: center;
+}
