--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -6,7 +6,7 @@
 .hero__container { 
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 30px);
     margin: 0 20px;
     scroll-snap-align: start;
     justify-items: center;
