--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -3,7 +3,7 @@
 // ------------ //
 
 
-.hero__container--xs { 
+.hero__container--xs {
 
     /*Hero Section Layout*/
     display: grid;
@@ -16,7 +16,7 @@
     align-content: center;
     overflow: hidden;
     grid-template-rows: 1fr auto;
-    
+
     /*Main Hero Logo Image*/
     img {
         width: 100%;
@@ -37,100 +37,108 @@
         justify-self: center;
         align-self: end;
         margin-bottom: 30px;
-        
+
         /*Scroll Down Icon Bounce Animation*/
         animation: bounce 3s infinite;
+
         @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-            transform: translateY(0);
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(0);
             }
+
             40% {
-            transform: translateY(-10px);
+                transform: translateY(-10px);
             }
+
             60% {
-            transform: translateY(-5px);
+                transform: translateY(-5px);
             }
         }
-        
+
         /*'Scroll Down' Text*/
         span {
-            grid-row: 1; 
+            grid-row: 1;
             line-height: 5px;
         }
-        
+
         /*Arrow Icon Link*/
         a {
-            grid-row: 2; 
-            margin-top: 2px; 
-            justify-self: center; 
+            grid-row: 2;
+            margin-top: 2px;
+            justify-self: center;
         }
 
         /*Hide At 768px For md Breakpoint*/
         @include respond-to(md) {
             display: none;
         }
-    
+
     }
 
 }
 
 
 
-        // .header__hero {
-        //     display: flex;
-        //     flex-direction: column;
-        //     flex-wrap: nowrap;
-        //     flex: 1;
-        //     white-space: nowrap;
-        //     position: relative;
-        //     width: 100%;
-        //     min-height: 100vh; 
-        //     background-size: cover;
-        //     background-position: center;
-        //     background-repeat: no-repeat;
-            
-        //     @include respond-to(md) {
-        //         width: calc(100% - 150px);
-        //         margin-left: 150px;
-        //     }
+// .header__hero {
+//     display: flex;
+//     flex-direction: column;
+//     flex-wrap: nowrap;
+//     flex: 1;
+//     white-space: nowrap;
+//     position: relative;
+//     width: 100%;
+//     min-height: 100vh; 
+//     background-size: cover;
+//     background-position: center;
+//     background-repeat: no-repeat;
 
-        //    img {
-        //     position: absolute;
-        //     top: 145px;
-        //     left: 20px;
-        //     max-width: 100%;    
-        //     height: auto;
-            
-        //    }
-        // }
+//     @include respond-to(md) {
+//         width: calc(100% - 150px);
+//         margin-left: 150px;
+//     }
 
-        // .header__down {
-        //     @include respond-to(md) {
-        //         display: none;
-        //     }
-        //     position: absolute;
-        //     bottom: 20px;
-        //     left: calc(50% - 48px);
-        //     text-align: center;
-        //     font-family: $base-font-family;
-        //     font-size: 1.25rem;
-        //     font-weight: 500;
-        //     color: $text-color;
-        //     animation: bounce 3s infinite;
-        //     @keyframes bounce {
-        //         0%, 20%, 50%, 80%, 100% {
-        //             transform: translateY(0);
-        //         }
-        //         40% {
-        //             transform: translateY(-10px);
-        //         }
-        //         60% {
-        //             transform: translateY(-5px);
-        //         }
-        //     }
+//    img {
+//     position: absolute;
+//     top: 145px;
+//     left: 20px;
+//     max-width: 100%;    
+//     height: auto;
 
-        //     i {
-        //         justify-self: center;
-        //     }
+//    }
+// }
 
-        // }
+// .header__down {
+//     @include respond-to(md) {
+//         display: none;
+//     }
+//     position: absolute;
+//     bottom: 20px;
+//     left: calc(50% - 48px);
+//     text-align: center;
+//     font-family: $base-font-family;
+//     font-size: 1.25rem;
+//     font-weight: 500;
+//     color: $text-color;
+//     animation: bounce 3s infinite;
+//     @keyframes bounce {
+//         0%, 20%, 50%, 80%, 100% {
+//             transform: translateY(0);
+//         }
+//         40% {
+//             transform: translateY(-10px);
+//         }
+//         60% {
+//             transform: translateY(-5px);
+//         }
+//     }
+
+//     i {
+//         justify-self: center;
+//     }
+
+// }
